feat: Add reload config from disk button, fix issues with text fields, add text field suggestions
Text field suggestions are taken from `ForgeroConfigurationLoader.defaultConfig`, and ellipsized.
Text fields no longer have brackets in them, and save properly now.

--- a/forgero-fabric-compat/src/main/resources/assets/forgero/lang/en_us.json
+++ b/forgero-fabric-compat/src/main/resources/assets/forgero/lang/en_us.json
@@ -4,6 +4,7 @@
   "forgero.menu.options.reset": "Reset",
   "forgero.menu.options.true": "True",
   "forgero.menu.options.false": "False",
+  "forgero.menu.options.reload_config": "Reload config from disk",
   "forgero.menu.options.disabledResources": "Disabled resources",
   "forgero.menu.options.disabledPacks": "Disabled packs",
   "forgero.menu.options.disableVanillaRecipes": "Disable vanilla recipes",
